static/css/style.css
html, body{height: 100%;}
body{font:12px arial,helvetica,verdana,sans-serif;background: rgb(247, 247, 247);}

a{color:#333;text-decoration:none;}
a:hover{color:#666;}

#wrapper { width: 900px; min-height: 100%;
           height: auto !important; height: 100%; margin: 0 auto -3em;
         }
         
h1 {font-size: 32px;}
h2 {font-size: 32px;}
h3 {font-size: 24px;}
h3.date-range {color: #999; margin-top: 20px}
         
#header {height: 70px;}

#header h1 {margin: 15px; float: left; height: 40px; line-height: 40px;}
#header h1 span {font-weight: normal;}
#header h2 {margin: 15px 0; float: left; line-height: 67px;}
#logo { height: 40px; float: left; width: 40px; margin: 15px 0;}

#notice { 
    float: right; margin-top:17px; 
    border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px;
    padding: 10px; display: none;
}

#notice.error { background: #FCF0F0; border: 1px solid #E2D0D0; }
#notice.success { background: green; }
#notice.info { background: yellow; }
#notice a { font-family: Arial; font-weight: bold;padding-left: 10px;}

#status { height: 200px; }
#status h2 { font-size: 60px; color: #FFF; text-align: center; padding-top: 65px;text-shadow: 2px 2px 0px #000;}

#content {
  border: 1px solid rgb(228, 228, 228); 
  background: white;
}

.frame { padding: 20px;}
.dialog { display: none; }

#sidebar { float: right; margin: 20px; width: 250px; }

#sidebar .panel { margin-bottom: 20px; }
#sidebar .panel { margin-bottom:20px; }
#sidebar .panel h3 { margin-bottom:7px; }
#sidebar .panel ul li {
  background:url(images/li.gif) no-repeat 0 3px;
  color:#7F7F7F;line-height:1.2em;
  border-top:1px solid #BBB;
  padding:4px 0 4px 16px;
}

#add-service { margin-top: 20px;}
#add-status { margin-top: 20px;}



/* wordpress entries styling - main content column */
#webservices table { width: 100%; border-spacing:10; font-size: 1.1em;}
#webservices th {text-align: left;font-size: 20px;padding: 10px;border-bottom: 1px solid rgb(228, 228, 228);border-right: 1px solid rgb(228, 228, 228);}
#webservices tr {font-size: 16px;}
#webservices td {padding: 10px;border-bottom: 1px solid rgb(228, 228, 228);border-right: 1px solid rgb(228, 228, 228); vertical-align: middle;}
#webservices .today {background: rgb(228, 228, 228);}
#webservices .highlight {background: rgb(247, 247, 247);}
#webservices .status, #webservices .date, #webservices .today, .delete {text-align: center;}
#webservices table a {text-decoration: underline;}

#webservices .event-log {margin-top: 20px; border-collapse: separate; border-left:1px solid #E4E4E4;border-top:1px solid #E4E4E4;}
#webservices .event-log thead {background:none repeat scroll 0 0 #EEEEEE;}
#webservices .event-log th {font-size: 16px;text-align: center;}
#webservices .event-log td {fonst-size: 14px;}
#webservices .event-log td:first-child {text-align: center;}
.status-header {width: 10%;}
.time-header {width: 20%;}
.delete-header {width: 8%;}

#submit { 
  background: rgb(228, 228, 228);
  border: 1px solid #ccc;
  margin: 20px 0px;
  padding: 10px;
  text-align: right;
}

#submit label {
  float: left;
  clear: left;
  width: 55px;
  padding: 10px;
}

#submit h3 {text-align: left;}

#submit .update-message { float: left; width: 390px; height: 100px; padding: 3px;}
#submit .update-status { float: left; margin: 10px 0px;}
#submit .update-submit { clear: left; display: block; margin-left: auto; width: 150px;}

#legend table tr, #legend table th {font-size: 12px}
#legend h4 { color: #999; font-size: 18px; margin: 20px 0 5px 0;}
#legend table {border: solid 2px rgb(228, 228, 228);width: auto}
#legend table tr td:first-child {width: 16px;}
#legend td {padding: 5px}


#footer, #push {height: 3em;}
#footer {padding: 0 30px; width: 900px; margin: auto;}
#footer ul {padding: 10px 0px;}
#footer ul.left { float: left;}
#footer ul.right { float: right;}
#footer ul li {display: inline;}
#icons li, #icons li a{ color: #ccc; }

td.status a{position: relative;}
td.status a .information {position: absolute; top: 0px; left: 1px; z-index: 999999}

.dialog label, .dialog textarea, .dialog input 
    { margin: 10px; clear: right;}
    
.dialog label {display: block;}
    
.dialog textarea { width: 400px; height: 75px;}

.breadcrumb { font-weight: normal;}

#add-note, #update-status { float: right; margin-left: 15px}
#add-event-model {display: none;}

#delete-service, #edit-service {margin-top: 20px}
#delete-service {float: right}
#delete-service-modal {display: none}

#documentation { 
    font-size: 14px;
}  

#documentation a { color: #4476B5; text-decoration: underline;}

#documentation p { margin: 10px 0px; }
#documentation h2 { margin: 20px 0 10px 0; }
#documentation h3 { margin: 15px 0px 10px 0; font-size: 24px; color:#555555;}
#documentation h4 { margin: 10px 0px; font-size: 22px; color: #4476B5;}
#documentation h5 { margin: 10px 0px; font-size: 16px;}

#documentation table {
    font-size: 12px;
}

#documentation table td, #documentation table th {
    padding: 10px;
    border: 1px solid #555555;
}

#documentation table td {
}

#documentation table th {
    background: #ccc;
}

#documentation table caption {font-style: italic; text-align: right;}


#documentation nav ul {
    height: 50px; background: #4476b5;
    -moz-border-radius: 10px;
    -webkit-border-radius: 10px;
    broder-radius: 10px;
    margin-bottom: 20px;

}

#documentation nav li {
    float: left;
    height: 50px;
    margin: 0 20px;
    line-height: 50px;
}

#documentation nav li a {
    display:block;
    font-size:15px;
    font-weight:bold;
    text-decoration:none;
    color: #F3FBEC;
}

#documentation nav .selected {
    background:url("../images/sub-nav-selected-arrow.png") no-repeat scroll center bottom transparent;
}



#documentation blockquote, pre {
    background: #F0F0F0;
    margin: 10px 0;
    padding: 10px;
    width:auto;
}

#documentation blockquote p {
    margin: 0;
}

